--- a/socket-client/src/app/globals.css
+++ b/socket-client/src/app/globals.css
@@ -19,3 +19,48 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 8px; /* Largura do scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Cor de fundo do track */
+  border-radius: 10px; /* Arredondamento das bordas do track */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #0001; /* Cor do "thumb", a parte que o usuário arrasta */
+  border-radius: 10px; /* Arredondamento das bordas do thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #0002; /* Cor do thumb quando o usuário passa o mouse sobre */
+}
+
+/* Definindo uma animação personalizada de "bounce" com delays */
+@keyframes typingBounce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+}
+
+.typing-dot {
+  animation: typingBounce 1s infinite;
+}
+
+.typing-dot:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.typing-dot:nth-child(2) {
+  animation-delay: 0.15s;
+}
+
+.typing-dot:nth-child(3) {
+  animation-delay: 0.3s;
+}
